# houdini-mcp-cli

./: .gitignore  Blib_Houdini_Bridge.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: BRIDGE_ONLY_RELEASE.md  COMPATIBILITY.md  HOUDINI_MCP.md
scripts/cli/: blib_hou.py  blib_hou_mcp.py
scripts/python/: blib_hou.py
scripts/python/blib_hou_bridge/: __init__.py  auth.py  codex_setup.py  commands.py  dynamics_profiles.py  history.py  inspector.py  protocol.py  recipes.py  server.py  shelf.py  state.py  workflow_templates.py
scripts/python/blib_hou_mcp/: __init__.py  server.py
tests/: __init__.py  test_blib_hou_bridge.py  test_blib_hou_mcp.py
toolbar/: Blib_Houdini_Bridge.shelf
tools/: acceptance_smoke.py  clean_release_artifacts.py  install_houdini_package.py  validate_bridge_release.py  write_houdini_package.py
